<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="btn_cancel" translatable="false">@android:string/cancel</string>
    <string name="alert_dialog_cancel" translatable="false">@android:string/cancel</string>
    <string name="key_default_currency" translatable="false">default_currency</string>
    <string name="key_first_run" translatable="false">key_first_run</string>
    <string name="key_license" translatable="false">app_license</string>
    <string name="key_enable_passcode" translatable="false">enable_passcode</string>
    <string name="key_change_passcode" translatable="false">change_passcode</string>
    <string name="key_about_gnucash" translatable="false">about_gnucash</string>
    <string name="key_default_transaction_type" translatable="false">default_transaction_type</string>
    <string name="key_export_all_transactions" translatable="false">export_all_transactions</string>
    <string name="key_delete_transactions_after_export" translatable="false">delete_transactions_after_export</string>
    <string name="key_compress_export" translatable="false">compress_export</string>
    <string name="key_default_export_email" translatable="false">export_email_target</string>
    <string name="key_use_double_entry" translatable="false">use_double_entry</string>
    <string name="key_xml_ofx_header" translatable="false">xml_ofx_header</string>
    <string name="key_import_accounts" translatable="false">import_gnucash_accounts</string>
    <string name="key_delete_all_accounts" translatable="false">delete_all_accounts</string>
    <string name="key_delete_all_transactions" translatable="false">delete_all_transactions</string>
    <string name="key_default_export_format" translatable="false">default_export_format</string>
    <string name="key_create_default_accounts" translatable="false">create_default_accounts</string>
    <string name="key_save_opening_balances" translatable="false">save_opening_balances</string>
    <string name="key_restore_backup" translatable="false">restore_backup</string>
    <string name="key_dropbox_sync" translatable="false">dropbox_sync</string>
    <string name="key_owncloud_sync" translatable="false">owncloud_sync</string>
    <string name="owncloud_pref" translatable="false">owncloud</string>
    <string name="owncloud_sync" translatable="false">owncloud_sync</string>
    <string name="key_owncloud_server" translatable="false">owncloud_server_address</string>
    <string name="key_owncloud_dir" translatable="false">owncloud_upload_dir</string>
    <string name="key_owncloud_username" translatable="false">owncloud_sync_username</string>
    <string name="key_owncloud_password" translatable="false">owncloud_sync_password</string>
    <string name="key_create_backup" translatable="false">create_backup</string>
    <string name="key_google_drive_app_folder_id" translatable="false">google_drive_app_folder</string>
    <string name="key_enable_crashlytics" translatable="false">enable_crashlytics</string>
    <string name="key_use_account_color" translatable="false">use_account_color</string>
    <string name="key_last_export_destination" translatable="false">last_export_destination</string>
    <string name="key_use_compact_list" translatable="false">use_compact_list</string>
    <string name="key_prefs_header_general" translatable="false">prefs_header_general</string>
    <string name="key_dropbox_access_token" translatable="false">dropbox_access_token</string>
    <string name="key_backup_location" translatable="false">backup_location</string>
    <string name="key_export_accounts_csv" translatable="false">export_accounts_csv_key</string>
    <string name="key_delete_transaction_backup" translatable="false">delete_transaction_backup</string>
    <string name="key_import_book_backup" translatable="false">import_book_backup</string>
    <!-- This is the filename for default backups. So use only simple characters and no spaces. Do not change the extension -->
    <string name="label_backup_filename" translatable="false">gnucash_pocket_backup.gnca</string>
    <string-array name="key_account_type_entries" translatable="false">
        <item>CASH</item>
        <item>BANK</item>
        <item>CREDIT</item>
        <item>ASSET</item>
        <item>LIABILITY</item>
        <item>INCOME</item>
        <item>EXPENSE</item>
        <item>PAYABLE</item>
        <item>RECEIVABLE</item>
        <item>EQUITY</item>
        <item>CURRENCY</item>
        <item>STOCK</item>
        <item>MUTUAL</item>
        <item>TRADING</item>
    </string-array>
    <string-array name="key_export_format_values" translatable="false">
        <item>CSVT</item>
        <item>QIF</item>
        <item>OFX</item>
        <item>XML</item>
    </string-array>
    <string-array name="export_formats" translatable="false">
        <item>@string/file_format_csv</item>
        <item>@string/file_format_qif</item>
        <item>@string/file_format_ofx</item>
        <item>@string/file_format_xml</item>
    </string-array>
    <string-array name="key_currency_codes" translatable="false">
        <item>AFN</item>
        <item>DZD</item>
        <item>ARS</item>
        <item>AMD</item>
        <item>AWG</item>
        <item>AUD</item>
        <item>AZN</item>
        <item>BSD</item>
        <item>BHD</item>
        <item>THB</item>
        <item>PAB</item>
        <item>BBD</item>
        <item>BYR</item>
        <item>BZD</item>
        <item>BMD</item>
        <item>VEF</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BND</item>
        <item>BGN</item>
        <item>BIF</item>
        <item>CAD</item>
        <item>CVE</item>
        <item>KYD</item>
        <item>XOF</item>
        <item>XAF</item>
        <item>XPF</item>
        <item>CLP</item>
        <item>XTS</item>
        <item>COP</item>
        <item>KMF</item>
        <item>CDF</item>
        <item>BAM</item>
        <item>NIO</item>
        <item>CRC</item>
        <item>HRK</item>
        <item>CUC</item>
        <item>CUP</item>
        <item>CZK</item>
        <item>GMD</item>
        <item>DKK</item>
        <item>MKD</item>
        <item>DJF</item>
        <item>STD</item>
        <item>DOP</item>
        <item>VND</item>
        <item>XCD</item>
        <item>EGP</item>
        <item>SVC</item>
        <item>ETB</item>
        <item>EUR</item>
        <item>FKP</item>
        <item>FJD</item>
        <item>HUF</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>XAU</item>
        <item>HTG</item>
        <item>PYG</item>
        <item>GNF</item>
        <item>GYD</item>
        <item>HKD</item>
        <item>UAH</item>
        <item>ISK</item>
        <item>INR</item>
        <item>IRR</item>
        <item>IQD</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>KES</item>
        <item>PGK</item>
        <item>LAK</item>
        <item>KWD</item>
        <item>MWK</item>
        <item>AOA</item>
        <item>MMK</item>
        <item>GEL</item>
        <item>LVL</item>
        <item>LBP</item>
        <item>ALL</item>
        <item>HNL</item>
        <item>SLL</item>
        <item>LRD</item>
        <item>LYD</item>
        <item>SZL</item>
        <item>LTL</item>
        <item>LSL</item>
        <item>MGA</item>
        <item>MYR</item>
        <item>MUR</item>
        <item>MXN</item>
        <item>MXV</item>
        <item>MDL</item>
        <item>MAD</item>
        <item>MZN</item>
        <item>BOV</item>
        <item>NGN</item>
        <item>ERN</item>
        <item>NAD</item>
        <item>NPR</item>
        <item>ANG</item>
        <item>ILS</item>
        <item>RON</item>
        <item>TWD</item>
        <item>NZD</item>
        <item>BTN</item>
        <item>KPW</item>
        <item>NOK</item>
        <item>PEN</item>
        <item>MRO</item>
        <item>TOP</item>
        <item>PKR</item>
        <item>XPD</item>
        <item>MOP</item>
        <item>PHP</item>
        <item>XPT</item>
        <item>GBP</item>
        <item>BWP</item>
        <item>QAR</item>
        <item>GTQ</item>
        <item>ZAR</item>
        <item>OMR</item>
        <item>KHR</item>
        <item>MVR</item>
        <item>IDR</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SHP</item>
        <item>SAR</item>
        <item>XDR</item>
        <item>RSD</item>
        <item>SCR</item>
        <item>XAG</item>
        <item>SGD</item>
        <item>SBD</item>
        <item>KGS</item>
        <item>SOS</item>
        <item>TJS</item>
        <item>SSP</item>
        <item>LKR</item>
        <item>XSU</item>
        <item>SDG</item>
        <item>SRD</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>SYP</item>
        <item>BDT</item>
        <item>WST</item>
        <item>TZS</item>
        <item>KZT</item>
        <item>XXX</item>
        <item>TTD</item>
        <item>MNT</item>
        <item>TND</item>
        <item>TRY</item>
        <item>TMT</item>
        <item>AED</item>
        <item>UGX</item>
        <item>XFU</item>
        <item>COU</item>
        <item>CLF</item>
        <item>UYI</item>
        <item>UYU</item>
        <item>USD</item>
        <item>UZS</item>
        <item>VUV</item>
        <item>CHE</item>
        <item>CHW</item>
        <item>KRW</item>
        <item>YER</item>
        <item>JPY</item>
        <item>CNY</item>
        <item>ZMK</item>
        <item>ZWL</item>
        <item>PLN</item>
    </string-array>
    <string name="schedule_export_description" translatable="false">"%1$s %2$s"</string>
    <string name="owncloud_server" translatable="false">https://owncloud.com</string>

    <!-- Theme. -->
    <string name="pref_appearance_title" translatable="false">@string/category_name_appearance</string>
    <string name="theme_title" translatable="false">@string/settings_screen_theme</string>
    <string name="theme_dark" translatable="false">@string/dark_ui_title</string>
    <string name="theme_light" translatable="false">@string/light_ui_title</string>
    <string name="theme_default" translatable="false">@string/default_theme</string>
    <string-array name="list_theme_values" translatable="false">
        <item>@string/theme_value_default</item>
        <item>@string/theme_value_dark</item>
        <item>@string/theme_value_light</item>
    </string-array>
    <string-array name="list_theme_entries" translatable="false">
        <item>@string/theme_default</item>
        <item>@string/theme_dark</item>
        <item>@string/theme_light</item>
    </string-array>
    <string name="hint_description" translatable="false">@string/description</string>
    <string name="hint_notes" translatable="false">@string/notes</string>
    <string name="hint_number" translatable="false">@string/number</string>
    <string name="label_account_color" translatable="false">@string/account_color</string>
    <string name="label_account_type" translatable="false">@string/type</string>
    <string name="label_account_name" translatable="false">@string/account_name</string>
    <string name="label_transaction_name" translatable="false">@string/description</string>
    <string name="label_placeholder_account" translatable="false">@string/placeholder</string>
    <string name="label_hidden" translatable="false">@string/hidden</string>
    <string name="csv_transaction_header_account_full_name" translatable="false">@string/csv_account_header_account_full_name</string>
    <string name="csv_transaction_header_account_name" translatable="false">@string/account_name</string>
    <string name="csv_transaction_header_description" translatable="false">@string/description</string>
    <string name="csv_account_header_description" translatable="false">@string/description</string>
    <string name="csv_account_header_account_name" translatable="false">@string/account_name</string>
    <string name="csv_account_header_account_code" translatable="false">@string/account_code</string>
    <string name="csv_account_header_colour" translatable="false">@string/account_color</string>
    <string name="csv_account_header_type" translatable="false">@string/type</string>
    <string name="csv_account_header_notes" translatable="false">@string/notes</string>
    <string name="csv_account_header_hidden" translatable="false">@string/hidden</string>
    <string name="csv_account_header_placeholder" translatable="false">@string/placeholder</string>
    <string name="default_color" translatable="false">@string/default_theme</string>
    <string name="menu_accounts_hidden" translatable="false">@string/hidden</string>
    <string name="exchange_rate_example">1 %1$s = %2$s %3$s</string>
    <string name="nav_menu_search">@string/menu_search_accounts</string>
    <string name="title_search">@string/menu_search_accounts</string>
    <string name="action_find">@android:string/search_go</string>
    <string name="search_field_description" translatable="false">@string/description</string>
    <string name="search_field_notes" translatable="false">@string/hint_notes</string>
    <string name="search_field_memo" translatable="false">@string/hint_split_memo</string>
    <string name="search_field_number" translatable="false">@string/hint_number</string>
    <string name="comma" translatable="false">,</string>
    <string name="semicolon" translatable="false">;</string>
    <string name="colon" translatable="false">:</string>
</resources>