<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/owncloud_hostname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/owncloud_server"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/owncloud_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:hint="Directory"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/owncloud_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/owncloud_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/owncloud_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        tools:text="@string/owncloud_server_invalid"
        tools:visibility="visible" />
</LinearLayout>